# mapreduce-from-scratch

./: CMakeLists.txt  README.md  README.md:Zone.Identifier  testMapReduce.py
src/: CMakeLists.txt  file_shard.h  mapreduce_spec.h  master.h  masterworker.proto  mr_tasks.h  threadpool.h  worker.h
test/: CMakeLists.txt  config.ini
